Implement automatic 'rtl' tag for arabic text pasted in the text editor

Thanks samirosman for his consultations on the topic
of Arabic languages! :)

BUG:392064
(cherry picked from commit a7c8affee3437ea80c27ec6f3670044ce788b250)